[gd_scene load_steps=42 format=3 uid="uid://dut1ttw4w6dqx"]

[ext_resource type="Texture2D" uid="uid://sy6r1qjyud55" path="res://assets/sprites/Desk_Static.png" id="1_62juk"]
[ext_resource type="Script" path="res://src/ceo_boss.gd" id="1_84b2s"]
[ext_resource type="Texture2D" uid="uid://c7y3y52oh6sbg" path="res://assets/sprites/MonitorLight.png" id="2_28ny4"]
[ext_resource type="Texture2D" uid="uid://r6b75n40gyxy" path="res://assets/sprites/Desk_Computer.png" id="3_wsd0e"]
[ext_resource type="Texture2D" uid="uid://b3m7b3wyx4tpw" path="res://assets/sprites/Clock.png" id="4_6b7vh"]
[ext_resource type="Script" path="res://src/ui/ceo_end.gd" id="4_7rxx5"]
[ext_resource type="LabelSettings" uid="uid://tpgtuioqqmmp" path="res://theme/title.tres" id="5_rqvos"]
[ext_resource type="Texture2D" uid="uid://bikrg3yecci4h" path="res://assets/sprites/ClockLight.png" id="6_purox"]
[ext_resource type="LabelSettings" uid="uid://bkph6n3e468da" path="res://theme/text_outline.tres" id="7_5fuld"]
[ext_resource type="Theme" uid="uid://7qw6fd3hy4kc" path="res://theme/theme.tres" id="7_7hhlt"]
[ext_resource type="Script" path="res://src/WorkTime.gd" id="8_o5skg"]
[ext_resource type="AudioStream" uid="uid://bpxm5pscsli23" path="res://assets/sound/鳩時計1.mp3" id="9_1lpq7"]
[ext_resource type="PackedScene" uid="uid://cgwassol31f0l" path="res://src/ui/typing_button.tscn" id="9_ki66l"]
[ext_resource type="AudioStream" uid="uid://dykrksjnisr7f" path="res://assets/sound/柱時計の鐘.mp3" id="10_fi7s7"]
[ext_resource type="Script" path="res://src/ui/break_button.gd" id="10_tj83x"]
[ext_resource type="Script" path="res://src/base-system/effect/EffectRoot.gd" id="11_cfe1t"]
[ext_resource type="Script" path="res://src/BlinkText.gd" id="11_v30mx"]
[ext_resource type="Texture2D" uid="uid://fhvvkmwkvr5c" path="res://assets/sprites/Desk_Plant.png" id="12_372bl"]
[ext_resource type="Script" path="res://src/base-system/effect/Slide.gd" id="12_qlq4h"]
[ext_resource type="Script" path="res://src/base-system/effect/Fade.gd" id="13_cgo0r"]
[ext_resource type="Texture2D" uid="uid://ctoyv3g7nvrwf" path="res://assets/sprites/Desk_Coffee.png" id="13_ms7dd"]
[ext_resource type="Texture2D" uid="uid://c7bni1sdaaaqn" path="res://assets/sprites/Desk_Keyboard.png" id="14_7rcew"]
[ext_resource type="AudioStream" uid="uid://e82h4pq7oib4" path="res://assets/sound/金額表示.mp3" id="14_875bo"]
[ext_resource type="Script" path="res://src/DocumentStack.gd" id="16_hdq7m"]
[ext_resource type="Texture2D" uid="uid://bi677bl6yv3en" path="res://assets/sprites/Document.png" id="17_g22pn"]
[ext_resource type="Curve" uid="uid://c5dolop3rdetn" path="res://src/dust_damp.tres" id="18_qm7xj"]
[ext_resource type="AudioStream" uid="uid://b42rb56q641vs" path="res://assets/sound/靴下片っぽ行方不明事件.mp3" id="19_u686l"]
[ext_resource type="Script" path="res://src/ManualLoopAudio.gd" id="20_l80bm"]
[ext_resource type="Script" path="res://src/KeyReader.gd" id="21_4ka37"]
[ext_resource type="Script" path="res://src/DocSpawner.gd" id="22_fsipy"]
[ext_resource type="PackedScene" uid="uid://d4l3bh8sq5hjr" path="res://src/document.tscn" id="23_fyva5"]
[ext_resource type="Script" path="res://src/WordGenerator.gd" id="24_c1j5d"]
[ext_resource type="PackedScene" uid="uid://dffjinparflk0" path="res://src/ui/day.tscn" id="25_u1q0x"]
[ext_resource type="Script" path="res://src/shift_overlay.gd" id="26_po2xs"]
[ext_resource type="Script" path="res://src/delegator.gd" id="27_13mc2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yl2xo"]

[sub_resource type="Curve" id="Curve_omwth"]
max_value = 5.0
_data = [Vector2(0, 2.36264), 0.0, 0.0, 0, 0, Vector2(1, 5), -1.99979, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_65xse"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.629214, 1)
colors = PackedColorArray(1, 1, 1, 0.596078, 0.853488, 0.853488, 0.853488, 0)

[sub_resource type="Animation" id="Animation_etxkd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGM:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vx230"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BGM:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bujp0"]
_data = {
"RESET": SubResource("Animation_etxkd"),
"start": SubResource("Animation_vx230")
}

[node name="CEOBoss" type="Node2D" node_paths=PackedStringArray("work_time")]
script = ExtResource("1_84b2s")
work_time = NodePath("Desk/Clock/HBoxContainer/WorkTime")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Day" parent="CanvasLayer" instance=ExtResource("25_u1q0x")]

[node name="End" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("retry_btn", "break_btn", "player_total", "player_combo", "player_wrong", "player_points", "boss_total", "boss_combo", "boss_wrong", "boss_points", "open_sound")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_7hhlt")
script = ExtResource("4_7rxx5")
retry_btn = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay/Retry")
break_btn = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay/Break")
player_total = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/PlayerFinished")
player_combo = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/HighstCombo")
player_wrong = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/PlayerWrong")
player_points = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/PlayerPoints")
boss_total = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/BossFinished")
boss_combo = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/BossCombo")
boss_wrong = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/BossWrong")
boss_points = NodePath("EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer/BossPoints")
open_sound = NodePath("OpenSound")

[node name="DayDelegator" type="Node" parent="CanvasLayer/End" node_paths=PackedStringArray("nodes")]
script = ExtResource("27_13mc2")
nodes = [NodePath("../EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay/Retry"), NodePath("../EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay/Break")]

[node name="EndEffect" type="Node" parent="CanvasLayer/End"]
script = ExtResource("11_cfe1t")
trans = 10
ease = 1
duration = 0.8

[node name="Slide2" type="Node" parent="CanvasLayer/End/EndEffect" node_paths=PackedStringArray("node")]
script = ExtResource("12_qlq4h")
node = NodePath("../../EndContainer")

[node name="Fade" type="Node" parent="CanvasLayer/End/EndEffect" node_paths=PackedStringArray("node")]
script = ExtResource("13_cgo0r")
node = NodePath("../../ColorRect")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/End"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="EndContainer" type="CenterContainer" parent="CanvasLayer/End"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/End/EndContainer"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yl2xo")

[node name="Work" type="MarginContainer" parent="CanvasLayer/End/EndContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/End/EndContainer/PanelContainer/Work"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer"]
layout_mode = 2
text = "Final Report"
label_settings = ExtResource("5_rqvos")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 2

[node name="PlayerFinished" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "FINISHED_TASKS"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="BossFinished" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "FINISHED_TASKS"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="HighstCombo" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "HIGHSET_COMBO"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="BossCombo" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "HIGHSET_COMBO"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="PlayerWrong" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "WRONG_TASKS"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="BossWrong" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "WRONG_TASKS"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="PlayerPoints" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "POINTS"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="BossPoints" type="Label" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "POINTS"
label_settings = ExtResource("7_5fuld")
horizontal_alignment = 1

[node name="NextDay" type="HBoxContainer" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Retry" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay" instance=ExtResource("9_ki66l")]
layout_mode = 2
word = "Retry"

[node name="Break" parent="CanvasLayer/End/EndContainer/PanelContainer/Work/VBoxContainer/VBoxContainer/NextDay" instance=ExtResource("9_ki66l")]
layout_mode = 2
script = ExtResource("10_tj83x")
word = "Break"

[node name="OpenSound" type="AudioStreamPlayer" parent="CanvasLayer/End"]
stream = ExtResource("14_875bo")
volume_db = -10.0
bus = &"SFX"

[node name="Desk" type="Sprite2D" parent="."]
texture = ExtResource("1_62juk")

[node name="PointLight2D" type="PointLight2D" parent="Desk"]
position = Vector2(0, 1)
blend_mode = 2
texture = ExtResource("2_28ny4")

[node name="Computer" type="Sprite2D" parent="Desk"]
position = Vector2(0, -80)
texture = ExtResource("3_wsd0e")

[node name="Clock" type="Sprite2D" parent="Desk"]
position = Vector2(88, -74)
texture = ExtResource("4_6b7vh")
hframes = 2

[node name="ClockLight1" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(-10.5, 2.25806)
blend_mode = 2
texture = ExtResource("6_purox")

[node name="ClockLight2" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(-4.5, 2.2)
blend_mode = 2
texture = ExtResource("6_purox")

[node name="ClockLight3" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(3.5, 2.25806)
blend_mode = 2
texture = ExtResource("6_purox")

[node name="ClockLight4" type="PointLight2D" parent="Desk/Clock"]
position = Vector2(9, 2.25806)
blend_mode = 2
texture = ExtResource("6_purox")

[node name="HBoxContainer" type="HBoxContainer" parent="Desk/Clock"]
light_mask = 2
visibility_layer = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = -5.5
offset_bottom = -0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_7hhlt")
theme_override_constants/separation = 0
alignment = 1

[node name="WorkTime" type="Label" parent="Desk/Clock/HBoxContainer" node_paths=PackedStringArray("timer", "day_end_sound", "overtime_sound")]
layout_mode = 2
theme = ExtResource("7_7hhlt")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "08"
horizontal_alignment = 1
script = ExtResource("8_o5skg")
hour_in_seconds = 5
timer = NodePath("Timer")
day_end_sound = NodePath("End")
overtime_sound = NodePath("Overtime")

[node name="End" type="AudioStreamPlayer" parent="Desk/Clock/HBoxContainer/WorkTime"]
process_mode = 3
stream = ExtResource("9_1lpq7")
volume_db = -10.0
bus = &"SFX"

[node name="Overtime" type="AudioStreamPlayer" parent="Desk/Clock/HBoxContainer/WorkTime"]
process_mode = 3
stream = ExtResource("10_fi7s7")
volume_db = -20.0
bus = &"SFX"

[node name="Timer" type="Timer" parent="Desk/Clock/HBoxContainer/WorkTime"]

[node name="MarginContainer" type="MarginContainer" parent="Desk/Clock/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="Colon" type="Label" parent="Desk/Clock/HBoxContainer/MarginContainer" node_paths=PackedStringArray("blink_timer")]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = ":"
script = ExtResource("11_v30mx")
blink_timer = NodePath("BlinkTimer")
blink_duration = 0.5

[node name="BlinkTimer" type="Timer" parent="Desk/Clock/HBoxContainer/MarginContainer/Colon"]
one_shot = true

[node name="Minutes" type="Label" parent="Desk/Clock/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "00"

[node name="Plant" type="Sprite2D" parent="Desk"]
position = Vector2(-118, -66)
texture = ExtResource("12_372bl")
hframes = 3

[node name="Coffee" type="Sprite2D" parent="Desk"]
position = Vector2(82, -29)
texture = ExtResource("13_ms7dd")
hframes = 2

[node name="Keyboard" type="Sprite2D" parent="Desk"]
position = Vector2(0, -33)
texture = ExtResource("14_7rcew")
hframes = 2

[node name="StartStack" type="Node2D" parent="."]
position = Vector2(-151, -84)
script = ExtResource("16_hdq7m")
initial_doc_count = 100
stack_count = 2
stack_offset = 3
max_stacks = 50
doc_texture = ExtResource("17_g22pn")

[node name="Sprite2D" type="Sprite2D" parent="StartStack"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("17_g22pn")

[node name="DocumentStack" type="Node2D" parent="."]
position = Vector2(133, -44)
script = ExtResource("16_hdq7m")
stack_count = 5
max_stacks = 25
doc_texture = ExtResource("17_g22pn")

[node name="CPUParticles2D" type="CPUParticles2D" parent="DocumentStack"]
position = Vector2(-10, 0)
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(5, 15)
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
damping_min = 90.0
damping_max = 90.0
damping_curve = ExtResource("18_qm7xj")
scale_amount_curve = SubResource("Curve_omwth")
color_ramp = SubResource("Gradient_65xse")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="DocumentStack"]
position = Vector2(10, 0)
scale = Vector2(-1, 1)
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(5, 15)
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
damping_min = 90.0
damping_max = 90.0
damping_curve = ExtResource("18_qm7xj")
scale_amount_curve = SubResource("Curve_omwth")
color_ramp = SubResource("Gradient_65xse")

[node name="CPUParticles2D3" type="CPUParticles2D" parent="DocumentStack"]
position = Vector2(0, -15)
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(7, 5)
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
damping_min = 90.0
damping_max = 90.0
damping_curve = ExtResource("18_qm7xj")
scale_amount_curve = SubResource("Curve_omwth")
color_ramp = SubResource("Gradient_65xse")

[node name="CPUParticles2D4" type="CPUParticles2D" parent="DocumentStack"]
position = Vector2(0, 15)
scale = Vector2(1, -1)
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(7, 5)
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
damping_min = 90.0
damping_max = 90.0
damping_curve = ExtResource("18_qm7xj")
scale_amount_curve = SubResource("Curve_omwth")
color_ramp = SubResource("Gradient_65xse")

[node name="CPUParticles2D5" type="CPUParticles2D" parent="DocumentStack"]
position = Vector2(0, 15)
scale = Vector2(1, -1)
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(7, 5)
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 40.0
initial_velocity_max = 40.0
damping_min = 90.0
damping_max = 90.0
damping_curve = ExtResource("18_qm7xj")
scale_amount_curve = SubResource("Curve_omwth")
color_ramp = SubResource("Gradient_65xse")

[node name="Sprite2D" type="Sprite2D" parent="DocumentStack"]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("17_g22pn")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_u686l")
volume_db = -30.0
pitch_scale = 2.0
bus = &"BGM"
script = ExtResource("20_l80bm")

[node name="KeyReader" type="Node" parent="."]
script = ExtResource("21_4ka37")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DocSpawner" type="Marker2D" parent="." node_paths=PackedStringArray("word_generator")]
position = Vector2(-200, 0)
script = ExtResource("22_fsipy")
document_scene = ExtResource("23_fyva5")
word_generator = NodePath("WordGenerator")

[node name="WordGenerator" type="Node" parent="DocSpawner"]
script = ExtResource("24_c1j5d")

[node name="Overlay" type="ColorRect" parent="."]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -215.0
offset_top = -130.0
offset_right = 215.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bujp0")
}

[node name="ShiftOverlay" type="Node" parent="." node_paths=PackedStringArray("overlay", "delegator")]
script = ExtResource("26_po2xs")
overlay = NodePath("../Overlay")
delegator = NodePath("ShiftDelegator")

[node name="ShiftDelegator" type="Node" parent="ShiftOverlay" node_paths=PackedStringArray("nodes")]
script = ExtResource("27_13mc2")
nodes = [NodePath("../..")]
